# spead

./: Cargo.toml  LICENSE  README.md  encrypted  encrypted.json  encrypted2.json  file.json
src/: error.rs  lib.rs  main.rs  numeric.rs  utils.rs
src/encryption/: aes.rs  chacha.rs  kdf.rs  mod.rs
tests/: high-depth.json  json-in-string.json
