[package]
name = "spead"
description = "Structure Preserving Encryption and Decryption CLI tool"
version = "0.4.0"
edition = "2024"
authors = ["Johan Yim <johanjyyim@gmail.com>"]
license = "GPL-3.0"
repository = "https://github.com/johanyim/spead"
homepage = "https://github.com/johanyim/spead"
categories = ["command-line-utilities"]
keywords = ["cli", "encryption", "cryptography"]
readme = "README.md"

[dependencies]
anyhow = "1.0.100"
argon2 = "0.5.3"
atty = "0.2.14"
camino = "1.2.1"
clap = { version = "4.5.49", features = ["derive"] }
cloudproof_fpe = "0.2.2"
# pseudonym = "0.2.3"
rand = "0.9.2"
rpassword = "7.4.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.145", features = ["arbitrary_precision", "preserve_order"] }
# TODO: get rid of this dependency?
thiserror = "2.0.17"


[dev-dependencies]
proptest = "1.9.0"
